--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <i class="fas fa-download"></i> Baixar Agora
                     </a>
                     <a href="https://discord.gg/cNF9FCBzfh" class="btn btn-secondary">
-                        <i class="fab fa-discord"></i> Entrar na Resenha
+                        <i class="fab fa-discord"></i> Entrar na Comunidade
                     </a>
                 </div>
             </div>
@@ -500,6 +500,18 @@
         const canvas = document.getElementById('bg-canvas');
         const ctx = canvas.getContext('2d');
         let particles = [];
+        
+        // Objeto para rastrear o mouse
+        const mouse = {
+            x: null,
+            y: null,
+            radius: 150 // Raio de interação
+        };
+
+        window.addEventListener('mousemove', (event) => {
+            mouse.x = event.x;
+            mouse.y = event.y;
+        });
 
         function initCanvas() {
             canvas.width = window.innerWidth;
@@ -514,10 +526,32 @@
                 this.speedX = Math.random() * 0.5 - 0.25;
                 this.speedY = Math.random() * 0.5 - 0.25;
                 this.alpha = Math.random() * 0.5;
+                this.baseX = this.x;
+                this.baseY = this.y;
+                this.density = (Math.random() * 30) + 1;
             }
             update() {
+                // Movimento base
                 this.x += this.speedX;
                 this.y += this.speedY;
+
+                // Interação com o mouse (repulsão)
+                let dx = mouse.x - this.x;
+                let dy = mouse.y - this.y;
+                let distance = Math.sqrt(dx * dx + dy * dy);
+                let forceDirectionX = dx / distance;
+                let forceDirectionY = dy / distance;
+                let maxDistance = mouse.radius;
+                let force = (maxDistance - distance) / maxDistance;
+                let directionX = forceDirectionX * force * this.density;
+                let directionY = forceDirectionY * force * this.density;
+
+                if (distance < mouse.radius) {
+                    this.x -= directionX;
+                    this.y -= directionY;
+                }
+
+                // Bordas
                 if (this.x > canvas.width) this.x = 0;
                 if (this.x < 0) this.x = canvas.width;
                 if (this.y > canvas.height) this.y = 0;
@@ -532,8 +566,32 @@
         }
 
         function createParticles() {
-            for (let i = 0; i < 100; i++) {
+            particles = [];
+            const numberOfParticles = (canvas.width * canvas.height) / 9000;
+            for (let i = 0; i < numberOfParticles; i++) {
                 particles.push(new Particle());
+            }
+        }
+
+        // Função para conectar partículas próximas
+        function connect() {
+            let opacityValue = 1;
+            for (let a = 0; a < particles.length; a++) {
+                for (let b = a; b < particles.length; b++) {
+                    let dx = particles[a].x - particles[b].x;
+                    let dy = particles[a].y - particles[b].y;
+                    let distance = Math.sqrt(dx * dx + dy * dy);
+
+                    if (distance < 100) {
+                        opacityValue = 1 - (distance/100);
+                        ctx.strokeStyle = `rgba(0, 210, 255, ${opacityValue * 0.2})`;
+                        ctx.lineWidth = 1;
+                        ctx.beginPath();
+                        ctx.moveTo(particles[a].x, particles[a].y);
+                        ctx.lineTo(particles[b].x, particles[b].y);
+                        ctx.stroke();
+                    }
+                }
             }
         }
 
@@ -543,10 +601,15 @@
                 p.update();
                 p.draw();
             });
+            connect();
             requestAnimationFrame(animate);
         }
 
-        window.addEventListener('resize', initCanvas);
+        window.addEventListener('resize', () => {
+            initCanvas();
+            createParticles();
+        });
+
         initCanvas();
         createParticles();
         animate();
