--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@ h1 .w3{color:var(--tx3);display:block}
 .dl-reqs{display:flex;gap:24px;justify-content:center;flex-wrap:wrap;margin-bottom:40px;font-size:12px;color:var(--tx2);font-family:'JetBrains Mono',monospace}
 .dl-req::before{content:'✓ ';color:var(--grn)}
 .dl-note{margin-top:18px;font-size:11px;color:var(--tx3);font-family:'JetBrains Mono',monospace}
+.dl-os-grid{display:flex;gap:14px;justify-content:center;flex-wrap:wrap;margin-bottom:36px}
+.btn-dl-os{display:inline-flex;align-items:center;gap:10px;border-radius:12px;padding:13px 26px;font-size:14px;font-weight:600;text-decoration:none;font-family:'JetBrains Mono',monospace;letter-spacing:.5px;transition:all .25s;cursor:pointer;border:none}
+.btn-dl-os.active{background:var(--acc);color:#000;box-shadow:0 0 48px rgba(0,212,255,.35)}
+.btn-dl-os.active:hover{transform:translateY(-3px);box-shadow:0 0 72px rgba(0,212,255,.55)}
+.btn-dl-os.soon{background:rgba(255,255,255,.04);color:var(--tx3);border:1px solid var(--brd);cursor:not-allowed;position:relative}
+.btn-dl-os.soon .soon-badge{position:absolute;top:-8px;right:-8px;font-size:9px;background:var(--tx3);color:var(--bg);border-radius:4px;padding:2px 6px;font-family:'JetBrains Mono',monospace;letter-spacing:.5px}
+.dl-mobile-notice{display:inline-flex;align-items:center;gap:10px;margin-top:20px;background:rgba(245,197,24,.06);border:1px solid rgba(245,197,24,.2);border-radius:10px;padding:10px 18px;font-size:12px;color:var(--gold);font-family:'JetBrains Mono',monospace;letter-spacing:.3px}
 
 /* ── FAQ ── */
 .faq-section{position:relative;z-index:2;padding:100px 24px;max-width:760px;margin:0 auto}
@@ -331,6 +338,7 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
     <a href="#saicon">Saicon</a>
     <a href="#telas">Telas</a>
     <a href="#faq">FAQ</a>
+    <a href="#sugestoes">Sugestões</a>
   </div>
   <a href="https://discord.gg/HPRE3aSCWr" class="nav-cta" target="_blank">
     <svg width="15" height="15" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057c.002.022.015.043.033.057a19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
@@ -838,11 +846,40 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
       <span class="dl-req">100% gratuito</span>
       <span class="dl-req">Sem anúncios</span>
     </div>
-    <a href="https://github.com/Pixelmodeler/DownloadGBR/releases/download/BETA/GMBR_Launcher_Setup_v3.2.exe" class="btn-dl" style="font-size:17px;padding:18px 44px">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
-      BAIXAR GMBR LAUNCHER
-    </a>
+    <div class="dl-os-grid">
+      <div style="display:flex;flex-direction:column;align-items:center;gap:8px">
+        <a href="https://github.com/Pixelmodeler/DownloadGBR/releases/download/BETA/GMBR_Launcher_Setup_v3.2.exe" class="btn-dl-os active">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M0 3.449L9.75 2.1v9.451H0m10.949-9.602L24 0v11.4H10.949M0 12.6h9.75v9.451L0 20.699M10.949 12.6H24V24l-12.9-1.801"/></svg>
+          Windows
+          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+        </a>
+        <a href="https://pixeldrain.com/u/Vv71xkeC" class="btn-dl-os" style="background:rgba(255,255,255,.05);color:var(--tx2);border:1px solid var(--brd);font-size:11px;padding:7px 18px" target="_blank">
+          <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+          Mirror — Pixeldrain
+        </a>
+      </div>
+      <div style="display:flex;flex-direction:column;align-items:center;gap:8px">
+        <a href="https://github.com/Pixelmodeler/DownloadGBR/releases/download/BETA/GMBR_Launcher_Linux.zip" class="btn-dl-os active">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12.504 0c-.155 0-.315.008-.48.021-4.226.333-3.105 4.807-3.17 6.298-.076 1.092-.3 1.953-1.05 3.02-.885 1.051-2.127 2.75-2.716 4.521-.278.832-.41 1.684-.287 2.489.117.779.567 1.563 1.182 2.114.267.243.613.39.988.39.417 0 .852-.163 1.235-.464.394-.31.65-.675.824-1.045.31-.681.458-1.434.562-2.196l.04-.302c.039-.3.068-.479.108-.568.155-.358.48-.568.864-.568.378 0 .72.197.906.538.124.228.173.48.22.749l.042.295c.1.748.247 1.497.547 2.178.167.37.42.739.811 1.05.378.3.81.463 1.228.463.375 0 .72-.147.987-.39.616-.55 1.066-1.335 1.183-2.114.123-.805-.009-1.657-.287-2.489-.59-1.771-1.832-3.47-2.717-4.521-.75-1.067-.974-1.928-1.05-3.02-.065-1.491 1.057-5.965-3.17-6.298-.164-.013-.324-.021-.48-.021zm.016 2.4c.123 0 .246.006.37.016 2.91.229 2.017 4.28 2.065 5.527.073 1.274.356 2.35 1.243 3.556.857 1.01 2.048 2.64 2.597 4.274.227.68.33 1.368.237 1.966-.081.534-.41 1.076-.794 1.42-.133.12-.3.184-.474.184-.196 0-.409-.08-.6-.234-.283-.224-.482-.52-.625-.85-.261-.575-.4-1.25-.494-1.944l-.044-.311c-.046-.27-.095-.576-.253-.87-.354-.654-1.027-1.04-1.762-1.04-.744 0-1.418.4-1.765 1.064-.15.289-.2.588-.245.857l-.04.3c-.094.698-.235 1.373-.497 1.947-.144.33-.344.627-.626.85-.192.154-.404.235-.6.235-.174 0-.341-.063-.474-.184-.384-.344-.713-.886-.794-1.42-.093-.598.01-1.286.237-1.966.549-1.634 1.74-3.265 2.597-4.274.887-1.206 1.17-2.282 1.243-3.556.048-1.247-.845-5.298 2.065-5.527.124-.01.248-.015.37-.015z"/></svg>
+          Linux (.AppImage)
+          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+        </a>
+        <a href="https://pixeldrain.com/u/Vv71xkeC" class="btn-dl-os" style="background:rgba(255,255,255,.05);color:var(--tx2);border:1px solid var(--brd);font-size:11px;padding:7px 18px" target="_blank">
+          <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+          Mirror — Pixeldrain
+        </a>
+      </div>
+      <div class="btn-dl-os soon" style="cursor:not-allowed">
+        <span class="soon-badge">EM DEV</span>
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.8-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
+        macOS
+      </div>
+    </div>
     <div class="dl-note">v3.2 · Se aparecer aviso do Windows: "Mais informações" → "Executar assim mesmo"</div>
+    <div class="dl-mobile-notice">
+      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="5" y="2" width="14" height="20" rx="2"/><line x1="12" y1="18" x2="12" y2="18.01"/></svg>
+      Versão mobile e macOS em desenvolvimento — fique ligado no Discord!
+    </div>
   </div>
 </section>
 
@@ -857,6 +894,21 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
   <div class="faq-item reveal"><div class="faq-q" onclick="toggleFaq(this)">O Windows deu aviso ao instalar. É vírus?<span class="icon"><svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor"><path d="M5 0v10M0 5h10"/></svg></span></div><div class="faq-a">Não. O aviso do SmartScreen aparece para qualquer app sem certificado digital pago. Clique em "Mais informações" e depois "Executar assim mesmo".</div></div>
   <div class="faq-item reveal"><div class="faq-q" onclick="toggleFaq(this)">O que é o Saicon?<span class="icon"><svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor"><path d="M5 0v10M0 5h10"/></svg></span></div><div class="faq-a">O Saicon é o mascote oficial do GMBR — um guaxinim animado que vive na interface. Você pode mudar a cor dele, colocar acessórios e até renomear nas configurações.</div></div>
   <div class="faq-item reveal"><div class="faq-q" onclick="toggleFaq(this)">Como pedir suporte se der erro?<span class="icon"><svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor"><path d="M5 0v10M0 5h10"/></svg></span></div><div class="faq-a">Na aba Suporte do app, clique em "Salvar Log — Escolher Pasta", escolha onde salvar e mande o arquivo num ticket no Discord. Nossa equipe responde rápido.</div></div>
+</section>
+
+<!-- SUGESTÕES -->
+<section class="dl-section" id="sugestoes" style="padding:100px 24px">
+  <div class="dl-glow"></div>
+  <div class="dl-inner reveal">
+    <div class="tag-sm" style="display:inline-block;margin-bottom:20px">// COMUNIDADE</div>
+    <div class="dl-title" style="font-size:clamp(44px,7vw,80px)">TEM UMA<br><span>IDEIA?</span></div>
+    <p class="dl-sub">Quer sugerir uma funcionalidade, reportar algo ou só dar uma opinião? Vai direto no canal do Discord — a gente lê tudo.</p>
+    <a href="https://discord.com/channels/1076278131926773801/1343040065550549052" target="_blank" class="btn-dl" style="display:inline-flex;margin:0 auto">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057c.002.022.015.043.033.057a19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
+      Sugerir no Discord
+    </a>
+    <div class="dl-note" style="margin-top:18px">Acessa o canal #sugestões e manda sua ideia — toda sugestão é levada a sério</div>
+  </div>
 </section>
 
 <!-- FOOTER -->
