--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
           Windows
           <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
         </a>
-        <a href="https://pixeldrain.com/u/Vv71xkeC" class="btn-dl-os" style="background:rgba(255,255,255,.05);color:var(--tx2);border:1px solid var(--brd);font-size:11px;padding:7px 18px" target="_blank">
+        <a href="https://pixeldrain.com/u/qVxfAFkG" class="btn-dl-os" style="background:rgba(255,255,255,.05);color:var(--tx2);border:1px solid var(--brd);font-size:11px;padding:7px 18px" target="_blank">
           <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
           Mirror — Pixeldrain
         </a>
@@ -1039,3 +1039,4 @@ applyBig();
 </script>
 </body>
 </html>
+
