--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,10 @@ document.querySelectorAll('.abtn').forEach(b=>{
   });
 });
 applyBig();
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8315966782573876"
+     crossorigin="anonymous"></script>
 </script>
 </body>
 </html>
+
 
