--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
     <a href="#telas">Telas</a>
     <a href="#faq">FAQ</a>
     <a href="#sugestoes">Sugestões</a>
+    <a href="#atualizacoes">Atualizações</a>
+    <a href="#doacao">Doação</a>
   </div>
   <a href="https://discord.gg/HPRE3aSCWr" class="nav-cta" target="_blank">
     <svg width="15" height="15" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057c.002.022.015.043.033.057a19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
@@ -355,7 +357,7 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
   <div class="hero-inner">
     <!-- LEFT -->
     <div>
-      <div class="hero-tag reveal">LANÇAMENTO v3.2</div>
+      <div class="hero-tag reveal">LANÇAMENTO v3.2.9</div>
       <h1 class="reveal d1">
         <span class="w1">SEU SETUP.</span>
         <span class="w2">SUA REGRA.</span>
@@ -379,7 +381,7 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
         <span class="pill">Windows 10/11</span>
         <span class="pill">64-bit</span>
         <span class="pill">Sem Python</span>
-        <span class="pill">v3.2</span>
+        <span class="pill">v3.2.9</span>
       </div>
     </div>
 
@@ -875,7 +877,7 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
         macOS
       </div>
     </div>
-    <div class="dl-note">v3.2 · Se aparecer aviso do Windows: "Mais informações" → "Executar assim mesmo"</div>
+    <div class="dl-note">v3.2.9 · Se aparecer aviso do Windows: "Mais informações" → "Executar assim mesmo"</div>
     <div class="dl-mobile-notice">
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="5" y="2" width="14" height="20" rx="2"/><line x1="12" y1="18" x2="12" y2="18.01"/></svg>
       Versão mobile e macOS em desenvolvimento — fique ligado no Discord!
@@ -911,16 +913,130 @@ footer{position:relative;z-index:2;border-top:1px solid var(--brd);padding:40px 
   </div>
 </section>
 
+<!-- ATUALIZAÇÕES -->
+<section id="atualizacoes" style="position:relative;z-index:2;padding:100px 24px;max-width:900px;margin:0 auto">
+  <div class="reveal">
+    <div class="tag-sm">// CHANGELOG</div>
+    <h2 class="h2" style="margin-bottom:16px">ATUALIZAÇÕES</h2>
+    <div style="display:flex;align-items:center;gap:12px;margin-bottom:48px;flex-wrap:wrap">
+      <span style="font-family:'JetBrains Mono',monospace;font-size:12px;color:var(--grn);background:rgba(0,229,170,.08);border:1px solid rgba(0,229,170,.25);border-radius:6px;padding:4px 12px">ATUAL: v3.2.9</span>
+      <span style="font-size:13px;color:var(--tx2)">→</span>
+      <span style="font-family:'JetBrains Mono',monospace;font-size:12px;color:var(--gold);background:rgba(245,197,24,.08);border:1px solid rgba(245,197,24,.25);border-radius:6px;padding:4px 12px">PRÓXIMA: v4.0</span>
+    </div>
+  </div>
+
+  <!-- ATUALIZAÇÃO 1 -->
+  <div class="reveal d1" style="background:var(--bg1);border:1px solid var(--brd);border-radius:20px;padding:36px;margin-bottom:24px;position:relative;overflow:hidden">
+    <div style="position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--acc),var(--acc2))"></div>
+    <div style="display:flex;align-items:center;gap:14px;margin-bottom:24px;flex-wrap:wrap">
+      <span style="font-family:'Bebas Neue',sans-serif;font-size:28px;letter-spacing:1px;color:var(--acc)">Atualização 1</span>
+      <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--tx2);background:var(--bg2);border:1px solid var(--brd);border-radius:6px;padding:3px 10px">v3.2.9</span>
+      <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--grn)">✓ LANÇADA</span>
+    </div>
+    <div style="display:flex;flex-direction:column;gap:14px">
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--acc);background:rgba(0,212,255,.1);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">01</span>
+        <span style="font-size:14px;color:var(--tx);line-height:1.6">Arrumado Sistema de Filmes</span>
+      </div>
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--acc);background:rgba(0,212,255,.1);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">02</span>
+        <span style="font-size:14px;color:var(--tx);line-height:1.6">Arrumado Jogos que não funcionavam para adicionar na Steam</span>
+      </div>
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--acc);background:rgba(0,212,255,.1);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">03</span>
+        <span style="font-size:14px;color:var(--tx);line-height:1.6">Agora o Launcher tem suporte para <strong style="color:var(--grn)">Linux</strong></span>
+      </div>
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--acc);background:rgba(0,212,255,.1);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">04</span>
+        <span style="font-size:14px;color:var(--tx);line-height:1.6">Site atualizado com novas mudanças</span>
+      </div>
+    </div>
+  </div>
+
+  <!-- EM DESENVOLVIMENTO -->
+  <div class="reveal d2" style="background:var(--bg1);border:1px solid rgba(245,197,24,.2);border-radius:20px;padding:36px;position:relative;overflow:hidden">
+    <div style="position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--gold),transparent)"></div>
+    <div style="display:flex;align-items:center;gap:14px;margin-bottom:8px;flex-wrap:wrap">
+      <span style="font-family:'Bebas Neue',sans-serif;font-size:28px;letter-spacing:1px;color:var(--gold)">v4.0</span>
+      <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--gold);background:rgba(245,197,24,.08);border:1px solid rgba(245,197,24,.25);border-radius:6px;padding:3px 10px">⚙ EM DESENVOLVIMENTO</span>
+    </div>
+    <p style="font-size:13px;color:var(--tx2);margin-bottom:24px;font-family:'JetBrains Mono',monospace;letter-spacing:.3px">Lançamento previsto da segunda atualização:</p>
+    <div style="display:flex;flex-direction:column;gap:14px">
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--gold);background:rgba(245,197,24,.08);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">01</span>
+        <span style="font-size:14px;color:var(--tx2);line-height:1.6">Sistema de download interno com opção de baixar via <strong style="color:var(--tx)">Launcher</strong> ou via <strong style="color:var(--tx)">Torrent</strong></span>
+      </div>
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--gold);background:rgba(245,197,24,.08);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">02</span>
+        <span style="font-size:14px;color:var(--tx2);line-height:1.6">Sistema de fontes para filmes</span>
+      </div>
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--gold);background:rgba(245,197,24,.08);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">03</span>
+        <span style="font-size:14px;color:var(--tx2);line-height:1.6">Sistema de horas jogadas semelhante à Steam</span>
+      </div>
+      <div style="display:flex;gap:14px;align-items:flex-start">
+        <span style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--gold);background:rgba(245,197,24,.08);border-radius:4px;padding:2px 8px;flex-shrink:0;margin-top:1px">04</span>
+        <span style="font-size:14px;color:var(--tx2);line-height:1.6">Aplicativo Mobile Completo</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- DOAÇÃO -->
+<section id="doacao" style="position:relative;z-index:2;padding:100px 24px;text-align:center;overflow:hidden">
+  <div class="dl-glow"></div>
+  <div class="dl-inner reveal" style="max-width:680px;margin:0 auto">
+    <div class="tag-sm" style="display:inline-block;margin-bottom:20px">// APOIE O PROJETO</div>
+    <h2 class="h2" style="margin-bottom:16px">FAÇA UMA<br><span style="color:var(--grn)">DOAÇÃO</span></h2>
+    <p style="font-size:15px;color:var(--tx2);line-height:1.75;margin-bottom:40px;font-weight:300">O GMBR Launcher é 100% gratuito e feito com muito carinho. Se quiser apoiar o desenvolvimento, qualquer valor já ajuda muito! 🦝</p>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-bottom:32px">
+
+      <!-- Chave pix celular -->
+      <div style="background:var(--bg1);border:1px solid var(--brd);border-radius:16px;padding:24px;text-align:left">
+        <div style="font-family:'JetBrains Mono',monospace;font-size:10px;color:var(--grn);letter-spacing:1px;margin-bottom:10px">📱 CELULAR</div>
+        <div style="font-family:'JetBrains Mono',monospace;font-size:14px;color:var(--tx);letter-spacing:.5px;word-break:break-all;margin-bottom:12px">199953230076</div>
+        <button onclick="navigator.clipboard.writeText('199953230076');this.textContent='✓ Copiado!';setTimeout(()=>this.textContent='Copiar',2000)" style="font-family:'JetBrains Mono',monospace;font-size:11px;background:rgba(0,229,170,.1);color:var(--grn);border:1px solid rgba(0,229,170,.25);border-radius:6px;padding:5px 14px;cursor:pointer;transition:all .2s">Copiar</button>
+      </div>
+
+      <!-- Chave pix CPF -->
+      <div style="background:var(--bg1);border:1px solid var(--brd);border-radius:16px;padding:24px;text-align:left">
+        <div style="font-family:'JetBrains Mono',monospace;font-size:10px;color:var(--grn);letter-spacing:1px;margin-bottom:10px">🪪 CPF</div>
+        <div style="font-family:'JetBrains Mono',monospace;font-size:14px;color:var(--tx);letter-spacing:.5px;word-break:break-all;margin-bottom:12px">53235500820</div>
+        <button onclick="navigator.clipboard.writeText('53235500820');this.textContent='✓ Copiado!';setTimeout(()=>this.textContent='Copiar',2000)" style="font-family:'JetBrains Mono',monospace;font-size:11px;background:rgba(0,229,170,.1);color:var(--grn);border:1px solid rgba(0,229,170,.25);border-radius:6px;padding:5px 14px;cursor:pointer;transition:all .2s">Copiar</button>
+      </div>
+
+      <!-- Chave pix Gmail -->
+      <div style="background:var(--bg1);border:1px solid var(--brd);border-radius:16px;padding:24px;text-align:left">
+        <div style="font-family:'JetBrains Mono',monospace;font-size:10px;color:var(--grn);letter-spacing:1px;margin-bottom:10px">📧 E-MAIL</div>
+        <div style="font-family:'JetBrains Mono',monospace;font-size:14px;color:var(--tx);letter-spacing:.5px;word-break:break-all;margin-bottom:12px">c26448015@gmail.com</div>
+        <button onclick="navigator.clipboard.writeText('c26448015@gmail.com');this.textContent='✓ Copiado!';setTimeout(()=>this.textContent='Copiar',2000)" style="font-family:'JetBrains Mono',monospace;font-size:11px;background:rgba(0,229,170,.1);color:var(--grn);border:1px solid rgba(0,229,170,.25);border-radius:6px;padding:5px 14px;cursor:pointer;transition:all .2s">Copiar</button>
+      </div>
+    </div>
+
+    <!-- Copia e cola -->
+    <div style="background:var(--bg1);border:1px solid rgba(0,212,255,.2);border-radius:16px;padding:24px;text-align:left">
+      <div style="font-family:'JetBrains Mono',monospace;font-size:10px;color:var(--acc);letter-spacing:1px;margin-bottom:12px">📋 COPIA E COLA (QR CODE PIX)</div>
+      <div style="font-family:'JetBrains Mono',monospace;font-size:11px;color:var(--tx2);line-height:1.7;word-break:break-all;background:var(--bg2);border:1px solid var(--brd);border-radius:8px;padding:14px;margin-bottom:14px;letter-spacing:.3px">00020126590014BR.GOV.BCB.PIX0114+55199532300760219Obrigado! by oliver5204000053039865802BR5925Christian Bernardo de Oli6009SAO PAULO62140510ZpUWjjV7CX63048D5F</div>
+      <button onclick="navigator.clipboard.writeText('00020126590014BR.GOV.BCB.PIX0114+55199532300760219Obrigado! by oliver5204000053039865802BR5925Christian Bernardo de Oli6009SAO PAULO62140510ZpUWjjV7CX63048D5F');this.textContent='✓ Código Copiado!';setTimeout(()=>this.textContent='Copiar Código PIX',2000)" style="font-family:'JetBrains Mono',monospace;font-size:12px;background:var(--acc);color:#000;border:none;border-radius:8px;padding:10px 22px;cursor:pointer;font-weight:700;transition:all .2s">Copiar Código PIX</button>
+    </div>
+
+    <p style="margin-top:20px;font-size:12px;color:var(--tx3);font-family:'JetBrains Mono',monospace">Obrigado pelo apoio! — Oliver 🦝</p>
+  </div>
+</section>
+
 <!-- FOOTER -->
 <footer>
   <div>
     <div class="foot-logo">GM<span>BR</span> LAUNCHER</div>
-    <div class="foot-sub">© 2026 · v3.2 · O Futuro é Open Source</div>
+    <div class="foot-sub">© 2026 · v3.2.9 · O Futuro é Open Source</div>
   </div>
   <div class="foot-links">
     <a href="https://discord.gg/HPRE3aSCWr" target="_blank">Discord</a>
     <a href="https://github.com/Pixelmodeler/DownloadGBR/releases" target="_blank">GitHub</a>
     <a href="#faq">FAQ</a>
+    <a href="#atualizacoes">Atualizações</a>
+    <a href="#doacao">Doação</a>
   </div>
 </footer>
 
@@ -1039,6 +1155,3 @@ applyBig();
 </script>
 </body>
 </html>
-
-
-
